ChangeSet for second meetings.

--- a/RxFair/Views/Home/Index.cshtml
+++ b/RxFair/Views/Home/Index.cshtml
@@ -6,52 +6,20 @@
 <section class="about_sec">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <div class="about_text">
-                    <h3>
-                        Patient Safety Simon Medicine A Worldwide Distinction
-                    </h3>
+            <div class="about_text">
+                <div>
+                    <h3>About ShopRx</h3>
                     <div class="scroll_image">
-                        <img src="rxfairfrontend/images/scroll.png" alt="scroll">
+                        <img src="~/rxfairfrontend/images/scroll.png" alt="scroll">
                     </div>
-                </div>
-            </div>
-            <div class="col-6 main-wreper">
-                <div class="video-main">
-                    <div class="img-wreper">
-                        <div class="img-logo"></div>
-                        <video id="shoprxvideo" controls="controls">
-                            <source src="~/rxfairfrontend/video/ShopRX%20Edited.mp4" type="video/mp4" />
-                        </video>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6">
-                <div class="about_text">
-                    <div>
-                        @**@
-                        <p>
-                            -Friendly Market Place
-                            Shoprx allows healthcare providers in the U.S. to compare pricing on over 65,000 RX, OTC, HBA, MED-SURG, and PET Supplies from trusted wholesalers nationwide.
-                        </p>
-                        <p>
-                            -Easy to use
-                            Shoprx is easy to use. Registering takes under three minutes to complete the sign up process and get started.
-                        </p>
-                        <p>
-                            -No fees for Pharmacies
-                            Yep, you read it correctly. Shoprx can help you maximize your savings without fees, contract or commitment. Everyone deserves a gift for using Shoprx.At Shoprx we provide a reward program for your everyday purchases.
-                        </p>
+                    <p>
+                        At Shoprx we are committed to delivery the highest level of customer care while offering the lowest prices available. We take pride in giving you a rewarding online experience. When you save time and money then we all accomplished our goals.
 
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-12">
-                <div class="about_btn d-flex justify-content-center mt-4">
-                    <div>
-                        <button type="button" class="btn btn-outline-primary con_btn LearnMore">Learn More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
-                        <span class="pulse"></span>
-                    </div>
+                    </p>
+                    <p>
+                        If you haven't done so already...
+                        Please give us a try
+                    </p>
                 </div>
             </div>
         </div>
@@ -140,77 +108,7 @@
     </div>
 </section>
 <!-- Information Section End -->
-<!-- Testimonial Start -->
-<section class="testimonials">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div class="testimonials_cen">
-                    <div>
-                        <div class="title">
-                            <h3>Testimonials</h3>
-                        </div>
-                        <div class="scroll_image">
-                            @*<img src="rxfairfrontend/images/scroll.png" alt="scroll">*@
-                        </div>
-                        <p>
-                            @*Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                Lorem Ipsum has been the industry's standard dummy text ever since the.*@
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12">
-                <div class="testimonials_sec owl-carousel owl-theme">
-                    @foreach (var testimonial in Model.TestimonialDto)
-                    {
-                        <div class="testimonials_slider item">
-                            <span><i class="fa fa-quote-right"></i></span>
-                            <img src="@testimonial.Image" class="img-fluid" alt="">
-                            <h5>@testimonial.Name</h5>
-                            <p>@testimonial.Feedback</p>
-                        </div>
-                    }
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- Testimonial End -->
-<!-- Newsletter Start -->
-<section class="newsletter_sec">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="newsletter_text">
-                    <h3>
-                        Subscribe to Newsletter
-                    </h3>
-                    <p>
-                        Get healthy news and solutions to your problems from our experts!
-                    </p>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="news-center">
-                    <div class="signup">
-                        <form id="frmSubscribe">
-                            @*<input type="email" id="email-signup" class="email-signup" placeholder="Your Email Address ..." required>
-                                <input type="button" id="btn" value="Subscribe">*@
-                            <div class="input-group mb-3">
-                                <input type="email" class="form-control" id="email-signup" placeholder="Your Email Address ..." aria-label="Recipient's username" aria-describedby="basic-addon2" required>
-                                <div class="input-group-append">
-                                    <button class="btn btn-outline-secondary" id="btn" type="button" value="Subscribe">Subscribe</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- Newsletter End -->
+
 @section Scripts{
     <script type="text/javascript">
         var videoPlayer = document.getElementById('shoprxvideo');
