--- a/RxFair/Views/Shared/_InfoSection.cshtml
+++ b/RxFair/Views/Shared/_InfoSection.cshtml
@@ -89,7 +89,7 @@
                     <div class="footer_one">
 
                         <ul>
-                            <li><i class="fa fa-map-marker"></i> ShopRx Labs, Inc.  325 9th St, San Francisco,  CA 94101</li>
+                            <li><i class="fa fa-map-marker"></i> Brooklyn,NY</li>
                             <li><i class="fa fa-envelope" aria-hidden="true"></i> customerCare@ShopRx.com</li>
                             <li><i class="fa fa-phone" aria-hidden="true"></i> 999-999-9999</li>
                         </ul>
@@ -97,37 +97,6 @@
                     </div>
 
 
-                </div>
-            </div>
-            <div class="col-md-4 margin_t">
-                <div class="footer_title infoTitle">
-                    <h5>Helpful Links</h5>
-                </div>
-                <div class="footer_one">
-                    <ul class="help-li">
-                        <li><a href="/Home/AboutUs">About Us</a></li>
-                        <li><a href="/Home/Faqs">FAQs</a></li>
-                        <li><a href="/Home/TermsCondition">Terms and Conditions</a></li>
-                        <li class="p-0"><a href="/Home/ContactUs">Contact Us</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="footer_title infoTitle">
-                    <h5>Follow us</h5>
-                </div>
-                <div class="footer_social">
-                    <ul>
-                        <li>
-                            <a href="javascript:;"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li>
-                            <a href="javascript:;"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li>
-                            <a href="javascript:;"><i class="fa fa-linkedin"></i></a>
-                        </li>
-                    </ul>
                 </div>
             </div>
         </div>
